<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">RHCS</string>
    <string name="hintpass">rhcs12</string>
    <string name="mono">1234567890</string>
    <string name="wait"> please wait..</string>
    <string name="share"> share</string>
    <string name="name"> Name</string>
    <string name="counterer"> counterer</string>
    <string name="user"> user</string>
    <string name="offline"> You Are Offline...!</string>
    <string name="username1"> username already exist</string>
    <string name="allfield"> please enter all fields</string>
    <string name="password1">password length should be 6 character</string>
    <string name="passwordnot">password not matched</string>
    <string name="valid">enter valid number</string>
    <string name="add1">you can not add the counterer more than 3</string>
    <string name="go">go to view</string>
    <string name="exist">username already exist</string>
    <string name="coutname">counterer added successfully</string>
    <string name="gotidpass">counterer got username and password</string>
    <string name="adcount">Add a counterer</string>
    <string name="usr">Enter Username</string>
    <string name="password">Enter Password</string>
    <string name="mocoun">enter mobile of counterer</string>
    <string name="ad">add</string>
    <string name="not">Note-You can add only 3 counterers </string>
    <string name="conp">confirm password</string>
    <string name="testlist">Test List</string>
    <string name="fetch">Fetching appoinments </string>
    <string name="share2"> share</string>
    <string name="name2"> Name</string>
    <string name="satara"> satara</string>
    <string name="rahul"> Rahul Pardeshi</string>
    <string name="monum">9766587722</string>
    <string name="karad">Karad</string>
    <string name="anna">Anna Pawar</string>
    <string name="monum1">9890595089</string>
    <string name="indapur">indapur</string>
    <string name="shende">Shende</string>
    <string name="monum2">9028187545</string>
    <string name="baramati">baramati</string>
    <string name="Shrinivas">Shrinivas Shelar</string>
    <string name="monum3">9623015512</string>
    <string name="phaltan">phaltan</string>
    <string name="vasant">Vasant Khuspe</string>
    <string name="monum4">9821316065</string>
    <string name="belgaum">belgaum</string>
    <string name="vikas">Vikas</string>
    <string name="monum5">9148993518</string>
    <string name="chiplun">chiplun</string>
    <string name="akash">Akash</string>
    <string name="monum6">8308942706</string>
    <string name="call">call</string>
    <string name="sure">Do you want to make a call to  </string>
    <string name="tel">tel</string>
    <string name="no">no</string>
    <string name="click">Just click on image to go at location</string>
    <string name="internet">NO INTERNET!</string>
    <string name="retry">RETRY</string>
    <string name="on">INTERNET IS ON</string>
    <string name="offline1">YOU ARE OFFLINE</string>
    <string name="wait1"> please wait..</string>
    <string name="username2">enter username</string>
    <string name="change1">please enter username to change password</string>
    <string name="user1"> user</string>
    <string name="pass1"> pass</string>
    <string name="stat"> static</string>
    <string name="uservalid"> Enter Valid username</string>
    <string name="allfield1"> please enter all fields</string>
    <string name="longchar"> password must be greater than 6 character</string>
    <string name="passw"> password</string>
    <string name="passchang"> Password Changed</string>
    <string name="notfound">password not found..!</string>
    <string name="usernot">Username not found</string>
    <string name="nomatch">not match</string>
    <string name="youoff">You Are Offline...!</string>
    <string name="head"> head manager</string>
    <string name="Leave">Leave</string>
    <string name="want">Do you want to logout from this account?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="press">press again back to exit...</string>
    <string name="analysing">analysing OTP..!</string>
    <string name="wait2"> please wait..</string>
    <string name="paschn">Password Changed</string>
    <string name="wrng">Wrong username</string>
    <string name="pasw">password does not matched</string>
    <string name="youof">You Are Offline...!</string>
    <string name="validno">Enter valid number</string>
    <string name="nomatch1">Phone number does not matched  </string>
    <string name="regno">Enter Registered Number</string>
    <string name="validcode">Enter valid code</string>
    <string name="mobilef">enter mobile first</string>
    <string name="verifying">verifying...</string>
    <string name="otpsend">OTP sent to your number</string>
    <string name="authentication">authentication successfull</string>
    <string name="something">Something went wrong,try again</string>
    <string name="internetno">NO INTERNET!</string>
    <string name="interon">INTERNET IS ON</string>
    <string name="generate">generate</string>
    <string name="center">Select Center</string>
    <string name="satara2"> satara</string>
    <string name="karad2">Karad</string>
    <string name="indapur2">indapur</string>
    <string name="baramati2">baramati</string>
    <string name="phaltan2">phaltan</string>
    <string name="belgaum2">belgaum</string>
    <string name="chiplun2">chiplun</string>
    <string name="move">please wait a movement...!</string>
    <string name="continu">Do you want to continue with </string>
    <string name="makesure">make sure</string>
    <string name="event">loading events please wait..!</string>
    <string name="notfoun"> events Not found</string>
    <string name="eventdel"> Event deleted</string>
    <string name="failevent">Failed</string>
    <string name="yff">You are offline..!</string>
    <string name="coninternet">please,connect to internet</string>
    <string name="countere">Cant delete counterer need atleast 2</string>
    <string name="delcount">Delete</string>
    <string name="decount">Are you sure, you want to Delete Countere </string>
    <string name="fetch1">Fetching appoinments </string>
    <string name="delappoint">Appointment Deleted </string>
    <string name="fetch2">आपल्या भेटी आणत आहे</string>
    <string name="upload1">Upload Here</string>
    <string name="waitplz">uploading,please wait..!</string>
    <string name="dosure">Do you want to continue with empty message</string>
    <string name="plzcon">please,connect to internet</string>
    <string name="selcent">please select center to proceed</string>
    <string name="selectimg">please select image..!</string>
    <string name="progressupload">upload is in progress</string>
    <string name="msure">make sure</string>
    <string name="noselect">no file selected</string>
    <string name="uploadsuccess">upload successfully</string>
    <string name="clickh">  click here </string>
    <string name="gmail">xyz@gmail.com</string>
    <string name="numbers">25487555</string>
    <string name="patintal"> Patient name already exist</string>
    <string name="suc">Successfull</string>
    <string name="fai">Failed</string>
    <string name="ent">Enter Empty Fields</string>
    <string name="cormo">enter correct mobile number</string>
    <string name="adtest">add test</string>
    <string name="maklog"> Make a Login  </string>
    <string name="forpass">Forgot/change Password?</string>
    <string name="Login">LogIn</string>
    <string name="arenew">Are you new?Register Now</string>
    <string name="chnglang">changing language</string>
    <string name="verywait">veryfying please wait a movement</string>
    <string name="entfield">please enter fields</string>
    <string name="loginsucces">login successful</string>
    <string name="pasnotfound">password not found</string>
    <string name="plsvalidpassword">please enter valid password </string>
    <string name="tryagin">please Try again...</string>
    <string name="usernotfound">username not found</string>
    <string name="youareoff">You Are Offline...!</string>
    <string name="patientname">Patient Name:-</string>
    <string name="weg">Weight:-</string>
    <string name="agepatient">Age:-</string>
    <string name="gend">Gender:-</string>
    <string name="refdoctor">Ref by doctor:-</string>
    <string name="clinicdetail">Clinical Details:-</string>
    <string name="historypatient">History of:-</string>
    <string name="gmaill">Email:-</string>
    <string name="monumber">Mobile Number:-</string>
    <string name="callhere">call from here</string>
    <string name="chngpass">Change password</string>
    <string name="newpas">Enter new password</string>
    <string name="rhcsrg">eg rhcs123</string>
    <string name="conpass">Confirm password</string>
    <string name="canclepass">cancle</string>
    <string name="changepas">change</string>
    <string name="makereg">Make a Registration</string>
    <string name="egabc">eg abc</string>
    <string name="rhcs123">eg rhcs123</string>
    <string name="eg12">eg 1234</string>
    <string name="confirmpasss">confirm password</string>
    <string name="egxyz">eg xyz123</string>
    <string name="canclepas">CANCLE</string>
    <string name="makcall">  Do you want to make a call</string>
    <string name="permissiongrant">Please grant permission</string>
    <string name="trycall">can not call,try again</string>
    <string name="registering">registering,please wait..!</string>
    <string name="pleaseent">please enter all fields</string>
    <string name="passnotmatch">password not matched</string>
    <string name="userall">username already exist</string>
    <string name="mustbe6">username must be greate than 6 character</string>
    <string name="password6">password length should be 6 character</string>
    <string name="regsuc">Registration successful</string>
    <string name="thankyou">Thank you for registration..!</string>
    <string name="aresure">Are you sure, you want to Delete this Appointment</string>
    <string name="appdel">Appointment Deleted</string>
    <string name="dd">Delete</string>
    <string name="current_language">English</string>
    <string name="open">Open</string>
    <string name="regestration">Regestration</string>
    <string name="Patientname">Eg John</string>
    <string name="weight">Eg 40KG</string>
    <string name="Age">Eg 35</string>
    <string-array name="Gender">
        <item>Select_Gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Trancegender</item>
    </string-array>
    <string name="referance">Eg DR.John Farnandis</string>
    <string name="phone">Eg 1234567890(optional)</string>
    <string name="details">Eg Asthma,Pregnancy etc</string>
    <string name="history">Eg Asthma related(,weeks,months)</string>
    <string name="other">Any Other(Please Specify)(optional)</string>
    <string name="register">Registration</string>
    <string name="login">REGISTER</string>
    <string name="pass">change the password</string>
    <string name="previous">Enter previous password</string>
    <string name="newp">Enter new password</string>
    <string name="change">change</string>
    <string name="trya">try another way?make phone authetication</string>
    <string name="ify">if you want to change password with phone authentication then you must provide username </string>
    <string name="appoint">Add Appointment</string>
    <string name="patn">Patient Name</string>
    <string name="wei">Weight</string>
    <string name="ag">Age</string>
    <string name="gen">Gender</string>
    <string name="dateapp">select date for appointment</string>
    <string name="refby">Ref. By Dr.</string>
    <string name="detail">Clinical Details</string>
    <string name="hist">History of</string>
    <string name="email">email</string>
    <string name="mob">mobile no.</string>
</resources>