<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="400dp"
    android:layout_height="500dp"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:src="@drawable/pass"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chngpass"
        android:gravity="center"
        android:textSize="30dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newpas"
        android:layout_marginTop="20dp"
        android:textColor="@color/signupColor"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/npasss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/pass"
        android:drawablePadding="20dp"
        android:hint="eg rhcs123"
        android:inputType="textPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conpass"
        android:textColor="@color/signupColor"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/cpasss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="20dp"
        android:hint="eg rhcs123"
        android:drawableRight="@drawable/pas"
        android:inputType="textPassword" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:orientation="horizontal">


        <Button
            android:id="@+id/cancle"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:elevation="5dp"
            android:layout_marginLeft="20dp"
            android:text="@string/canclepass"
            android:textAllCaps="false"
            android:background="@drawable/round_button"
            android:clickable="true"
            android:focusable="true"
            android:textColor="#fff"
            android:textSize="20dp"
            android:textStyle="bold"
            />
        <Button
            android:id="@+id/changes"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            android:text="@string/changepas"
            android:textAllCaps="false"

            android:elevation="10dp"
            android:background="@drawable/roundbutton2"
            android:clickable="true"
            android:focusable="true"
            android:textColor="#fff"
            android:textSize="20dp"
            android:textStyle="bold"
            />
    </LinearLayout>


</LinearLayout>